--- a/_posts/2021-01-01-citation-02.md
+++ b/_posts/2021-01-01-citation-02.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Citation in Environment International
+title: Cited in Environment International
 tags: [Water fingerprinting, Chemical mining, Wastewater-based epidemiology,Human exposure]
 ---
 
